Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -101,7 +101,6 @@
     background-position: center;
     background-size: cover;
     transform: rotate(45deg);
-    cursor: pointer;
 }
 
 .call-button a {
@@ -110,7 +109,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    outline: none;
     z-index: 1;
 }
 
